--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,8 @@ Issues Tracker: http://code.google.com/p/sqljet/issues/list
   * Javadoc updates (-r839, -r845).
   * Better error message on schema parsing failure (-r844).
   * Exception is thrown now on lexer error when parsing schema (-r854).
+  * Detecting conflicts and reserved names  when create tables or indexes.
+  * 
 
 Version 1.0.1
 (20 Nov 2009, from /branches/1.0.x)
